test/e2e/setup/manifests/vote/k8s/ingress-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-to-public
  namespace: present
spec:
  replacePathRegex:
    regex: ^/auth(/.*)?$
    replacement: /public$1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: session-info
  namespace: present
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`present.z65.nl`) && PathPrefix(`/auth`)  # This is an extra indepth layer, but probably not the 'long' term solution since kubectl needs access to /apis for example to discover stuff...
      kind: Rule
      middlewares:
        - name: auth-to-public
        - name: auth-forwarder
      services:
        - name: auth-service
          port: http
          scheme: http
  tls: {}
