test/e2e/setup/manifests/vote/k8s/ingress-kubeapi.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-forwarder
  namespace: present
spec:
  forwardAuth:
    address: http://auth-service.present.svc.cluster.local:8080/private/forward-auth-decision
    trustForwardHeader: true
    authResponseHeaders:
      - Authorization
    addAuthCookiesToResponse: 
      - auth_session
---
apiVersion: traefik.io/v1alpha1
kind: ServersTransport
metadata:
  name: kube-apiserver-transport
  namespace: default
spec:
  rootCAs:
    - configMap: kube-root-ca.crt
  serverName: kubernetes.default.svc
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-api-examples-only
  namespace: present
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`present.z65.nl`) && PathPrefix(`/apis/examples.configbutler.ai/`)  # This is an extra indepth layer, but probably not the 'long' term solution since kubectl needs access to /apis for example to discover stuff...
      kind: Rule
      middlewares:
        - name: auth-forwarder
      services:
        - name: kubernetes
          namespace: default
          port: 443
          scheme: https
          serversTransport: default-kube-apiserver-transport@kubernetescrd
  tls: {}
---
